--- a/Avaliação/index.html
+++ b/Avaliação/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Avaliação</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <img src="icon-star.svg" alt="imagem estrelinha">
+        <h2>Como foi a nossa performance?</h2>
+        <p>Por favor, nos conte como foi sua experiência com o nosso atendimendo. Todo feedback é valioso para nos ajudar a melhorar nossos serviços!</p>
+        <div class="notamento">
+            <a class="nota" href="#">1</a>
+            <a class="nota" href="#">2</a>
+            <a class="nota" href="#">3</a>
+            <a class="nota" href="#">4</a>
+            <a class="nota" href="#">5</a>
+        </div>
+        <a class="avaliar" href="#">Avaliar</a>
+    </div>
+</body>
+</html>
